<resources>

    <!-- ...................................................................... Authentication keys -->
    <string name="com_auth0_client_id">mWdxl1wxhy1SktUHwOJC98zGllF3WqnQ</string>
    <string name="com_auth0_domain">fitme.auth0.com</string>

    <!-- ...................................................................... Commons -->
    <string name="app_name">FitMe</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="close_sesion">Cerrar sesión</string>
    <string name="my_account">Cuenta</string>
    <string name="message">Mensajes</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="home">Inicio</string>
    <string name="shrug">¯\_(ツ)_/¯</string>
    <string name="no_info">Sin información</string>
    <string name="no_results">Parece que está vacio</string>
    <string name="distance_label">Distancia:</string>
    <string name="time_label">Tiempo:</string>
    <string name="start_walk">Comenzar a caminar</string>
    <string name="add_nutrition_session">Cargar comida</string>
    <string name="add_user_experience">Agregar experiencia</string>

    <string name="stop_walk">Parar</string>
    <string name="daily_distance_label">Distancia caminada</string>
    <string name="daily_time_label">Total de tiempo</string>
    <string name="daily_pace_label">Pasos</string>
    <string name="initial_weight_label">Peso inicial</string>
    <string name="current_fat_label">Peso actual</string>
    <string name="frecuency_exercise_label">Frecuencia de ejercicio</string>
    <string name="height_label">Altura</string>
    <string name="goal_label">Objetivo</string>
    <string name="goal_fat_label">Peso objetivo</string>
    <string name="workout_exercise">Ejercicio</string>
    <string name="meal_nutrition">Dieta sugerida</string>

    <string name="save_walk_data_title">Caminata</string>
    <string name="save_walk_data_message">Guardar registro de caminata</string>
    <string name="close">Cerrar</string>
    <string name="save_walk_data">Guardar entrenamiento</string>
    <string name="save_nutrition">Guardar comida</string>
    <string name="save_user_experience">Guardar experiencia</string>

    <string name="form_edit">Editar datos</string>
    <string name="my_location">Mi ubicación</string>
    <string name="message_user_experience">Escriba un breve comentario para darle feedback a su coach</string>

    <string name="initial_weight_label_interpolation">Peso inicial: %s</string>
    <string name="current_fat_label_interpolation">Peso actual: %s</string>
    <string name="frecuency_exercise_label_interpolation">Frecuencia de ejercicio: %s</string>
    <string name="height_label_interpolation">Altura: %s</string>
    <string name="goal_label_interpolation">Objetivo: %s</string>
    <string name="message_label">Hola %s!</string>
    <string name="daily_dist_data">%.1f metros</string>
    <string name="daily_time_data">%d min</string>
    <string name="daily_pace_data">%.1f min/metros</string>

    <string name="creating_session">Iniciando sesión</string>
    <string name="creating_user_experiences">Creando experiencia</string>
    <string name="how_is_your_scoring">Califique su sesión</string>
    <string name="how_is_your_experience">Califique su experiencia</string>

    <string name="obtaining_user_info">Obteniendo informacion del usuario</string>
    <string name="obtaining_user_info_training">Obteniendo informacion del entrenamiento</string>

    <string name="obtaining_routines">Obteniendo rutinas</string>
    <string name="obtaining_user_experiences">Obteniendo experiencias</string>
    <string name="obtaining_routine_detail">Obteniendo detalle de la rutina</string>

    <string name="obtaining_exercise_running">Obteniendo entrenamientos</string>
    <string name="saving_running_session">Guardando entrenamiento</string>
    <string name="saving_nutrition_session">Guardando comida</string>

    <string name="updating_user_info">Actualizando datos del usuario</string>

    <string name="obtaining_kilometers_runned">Obteniendo kilometros recorridos</string>


    <string name="unexpected_error">Error inesperado</string>
    <string name="has_ocurried_an_error">Ha ocurrido un error. Intente nuevamente</string>
    <string name="nutrition_sessions">Comidas ingeridas</string>
    <string name="nutrition_session">Comidas ingerida</string>

    <string name="user_experience">Experiencia</string>
    <string name="calories">Calorias</string>
    <string name="training_session">Entrenamientos</string>


    <!-- ...................................................................... Enums -->

    <string name="BEGINNER">Principiante</string>
    <string name="BASIC">Facil</string>
    <string name="INTERMEDIATE">Intermedio</string>
    <string name="ADVANCED">Avanzado</string>
    <string name="EXPERT">Experto</string>
    <string name="UNKNOWN">Desconocido</string>
    <string name="GAIN_WEIGHT">Ganar peso</string>
    <string name="LOSS_WEIGHT">Perder peso</string>
    <string name="BREAKFAST">Desayuno</string>
    <string name="BRUNCH">Brunch</string>
    <string name="ELEVENSES">Colación</string>
    <string name="LUNCH">Almuerzo</string>
    <string name="TEA">Te</string>
    <string name="SUPPER">Precena</string>
    <string name="DINNER">Cena</string>
    <string name="GOOD">Bueno</string>
    <string name="REGULAR">Regular</string>
    <string name="BAD">Malo</string>
    <string name="AEROBIC">Aeróbico</string>
    <string name="FLEXIBILITY">Flexibilidad</string>
    <string name="STRENGTH">Fuerza</string>
    <string name="running_session">Sesión de running</string>


</resources>
