<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home_fitme"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/home" />

    <item
        android:id="@+id/my_account"
        android:icon="@drawable/account"
        android:orderInCategory="100"
        android:title="@string/my_account" />
    <item
        android:id="@+id/begin_run"
        android:icon="@drawable/runner"
        android:orderInCategory="100"
        android:title="@string/training_session" />
    
    <item
        android:id="@+id/close_session"
        android:icon="@drawable/power"
        android:orderInCategory="100"
        android:title="@string/close_sesion" />
</menu>