<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/heavy_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/heavy_margin"
        android:text="@string/add_nutrition_session"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/meal_nutrition"
        android:textColor="#212121" />

    <Spinner
        android:id="@+id/editMealNutritionType"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown" />


    <EditText
        android:id="@+id/editCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/calories"
        android:textColor="#212121" />

</LinearLayout>