<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.fitness.RunningFragment">


    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/heavy_margin"
        android:text="@string/message_label"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/daily_distance_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/dailyDistanceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="0.0 metros"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/daily_time_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/dailyTimeData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="0.0 min" />

    <TextView
        android:id="@+id/lblPace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/daily_pace_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/dailyPaceData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="0.3 mi/s" />

    <Button
        android:id="@+id/btnWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_walk"
        android:textColor="@color/white_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/heavy_margin"
        android:src="@drawable/running_photo_2"></ImageView>
</LinearLayout>