<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    tools:context=".views.fragments.fitness.WalkFragment">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"></fragment>

    <RelativeLayout
        android:id="@+id/time_dis_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/container_margin"
        android:background="@color/white_color">

        <TextView
            android:id="@+id/lblDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="@dimen/label_padding"
            android:text="@string/distance_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_bold_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/lblDistance"
            android:padding="@dimen/label_padding"
            android:text="0.0 metros"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblDistance"
            android:layout_alignParentStart="true"
            android:padding="@dimen/label_padding"
            android:text="@string/time_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_bold_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblDistance"
            android:layout_toEndOf="@+id/lblDistance"
            android:padding="@dimen/label_padding"
            android:text="0:0:0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/start_stop_walk_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txtTime"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:padding="@dimen/walk_btn_padding"
            android:text="@string/start_walk"
            android:textColor="@color/white_color" />

    </RelativeLayout>

</LinearLayout>